plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'styp.com'
version = '0.0.1-SNAPSHOT'
description = 'CENATE API - Sistema de Gestión'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

dependencies {
    /* ==========================
       🔹 SPRING BOOT STARTERS
       ========================== */
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    /* ✅ ACTUATOR (para /actuator/health, /actuator/mappings, etc.) */
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    /* ==========================
       🔹 DATABASE
       ========================== */
    runtimeOnly 'org.postgresql:postgresql'

    /* ==========================
       🔹 JWT
       ========================== */
    implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

    /* ==========================
       🔹 SWAGGER / OPENAPI
       ========================== */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    /* ==========================
       🔹 MODEL MAPPER
       ========================== */
    implementation 'org.modelmapper:modelmapper:3.2.0'

    /* ==========================
       🔹 LOMBOK
       ========================== */
    compileOnly 'org.projectlombok:lombok:1.18.40'
    annotationProcessor 'org.projectlombok:lombok:1.18.40'
    testCompileOnly 'org.projectlombok:lombok:1.18.40'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.40'

    /* ==========================
       🔹 TESTING
       ========================== */
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

springBoot {
    mainClass = 'styp.com.cenate.CenateApplication'
}

tasks.named('test') {
    useJUnitPlatform()
}

tasks.register('cleanBuild') {
    dependsOn 'clean', 'build'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['-parameters']
    options.annotationProcessorPath = configurations.annotationProcessor
}

tasks.withType(Test).configureEach {
    systemProperty "spring.profiles.active", "test"
    testLogging {
        events "passed", "skipped", "failed"
    }
}
